フォルダ単位での図面比較クラスを実装

--- a/AcadComp.vcxproj
+++ b/AcadComp.vcxproj
@@ -425,6 +425,11 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="zfcCmdCompareDwgInFolder.cpp" />
+    <ClCompile Include="zfcCommand.cpp" />
+    <ClCompile Include="zfcComparetor.cpp" />
+    <ClCompile Include="zfcLogger.cpp" />
+    <ClCompile Include="zfcUtility.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="AcadComp.def" />
@@ -472,6 +477,13 @@
     <ClInclude Include="rxdebug.h" />
     <ClInclude Include="StdAfx.h" />
     <ClInclude Include="StdArx.h" />
+    <ClInclude Include="StdZfc.h" />
+    <ClInclude Include="zfcCmdCompareDwgInFolder.h" />
+    <ClInclude Include="zfcCommand.h" />
+    <ClInclude Include="zfcComparetor.h" />
+    <ClInclude Include="zfcLogger.h" />
+    <ClInclude Include="zfcTypeDef.h" />
+    <ClInclude Include="zfcUtility.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
