--- a/AcadComp.rc
+++ b/AcadComp.rc
@@ -228,6 +228,7 @@ END
 STRINGTABLE
 BEGIN
     IDS_OLD_DWG_TIMESTAMP_IS_NEW "旧図面のファイル更新日時の方が新図面ファイルより新しい：%1 %2"
+    IDS_COMPLETE_COMPARE_DWG "図面の比較が終了しました。"
 END
 
 #endif    // 日本語 (日本) resources
